--- a/web/src/app.html
+++ b/web/src/app.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="viewport-fit=cover, width=device-width, height=device-height, initial-scale=1, maximum-scale=1">
 
-        <title>cobalt</title>
+        <title>astatine</title>
 
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="apple-mobile-web-app-title" content="cobalt">
+        <meta name="apple-mobile-web-app-title" content="astatine">
 
         <link rel="icon" href="%sveltekit.assets%/favicon.png">
         <link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/icons/apple-touch-icon.png">
